# FromScracthAI

./: .gitignore  Function.py  Funtion.py  Operator.py  README.md  pyproject.toml
dezero/: __init__.py  core.py  core_simple.py  functions.py  utils.py
src/fromscratchai/: __init__.py
tests/: test_function.py
