[project]
name = "fromscratchai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jamuojisan", email = "kage0427@gmail.com" }
]
dependencies = [
    "numpy>=2.2.1",
    "pytest>=8.3.4",
    "memory-profiler>=0.61.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fromscratchai"]
